# Gpucompress

./: Cargo.toml
.github/workflows/: main.yml
.jules/: bolt.md
lat-core/: Cargo.toml
lat-core/src/: lib.rs
lat-formats/7z/: Cargo.toml
lat-formats/7z/src/: lib.rs
lat-formats/lat/: Cargo.toml  DESIGN.md
lat-formats/lat/src/: lib.rs
lat-formats/paqg/: Cargo.toml  DESIGN.md
lat-formats/paqg/src/: lib.rs
lat-formats/zip/: Cargo.toml
lat-formats/zip/src/: lib.rs
lat-gpu-cuda/: Cargo.toml
lat-gpu-cuda/src/: lib.rs
lat-gpu-cuda/src/kernels/: lat.cu  paqg.cu
lat-gpu-vulkan/: Cargo.toml
lat-gpu-vulkan/src/: lib.rs
lat-gpu-vulkan/src/shaders/: paqg.comp
lat-gui/: Cargo.toml
lat-gui/src/: main.rs
lat-gui/ui/: appwindow.slint
